Fixed white gap

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -93,6 +93,8 @@ hr {
 
 .container {
     padding: 75px 0;
+    z-index: 2;
+    position: relative;
 }
 
 /* ----- NAV/NAV-BAR -----*/
@@ -194,9 +196,10 @@ section {
 }
 
 section h2 {
-    margin: 0;
+    margin-bottom: 75px;
     font-size: 3rem;
     font-weight: 800;
+    text-align: center;
 }
 
 .section-overview {
@@ -830,6 +833,8 @@ footer .footer-below {
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.75);
+    pointer-events: none;
+    z-index: 0;
 }
 
 .pattern-overlay.subdued {
